--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
    <%= stylesheet_link_tag    'application', media: 'all' %>
    <%= csrf_meta_tags %>
    <%= javascript_include_tag 'application' %>
-  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
+  <%= favicon_link_tag 'favicon.ico' %>
 
   <title>Apartrue</title>
 </head>
