Add cancel button to update form

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -138,3 +138,27 @@ p.title-count {
   font-size: 12px;
   color: red;
 }
+
+.small-box {
+  height: 40px;
+  width: 40px;
+  border: 1px solid black;
+
+}
+
+.checkbox {
+  border: 1px solid black;
+  height: 20px;
+  width: 20px;
+  margin: auto;
+}
+
+.side-by {
+  float: left;
+  margin-left: 10px;
+}
+
+.two-button-wrapper {
+  width: 348px;
+  margin: auto;
+}
