--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -25,7 +25,7 @@ body {
   background-size: 1500px;
   min-height: 900px;
   min-width: 1000px;
-  max-width: 1500px;
+  // max-width: 1500px;
   margin: auto;
   position: relative;
   background-attachment: fixed;
