change image size

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -22,7 +22,7 @@ body {
   background-color: #2d2d2d;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1500px;
+  background-size: 100%;
   min-height: 900px;
   min-width: 1000px;
   // max-width: 1500px;
